RESOLVED FIXED310691
Potentially null dereference of wrappedDecoder in Decoder::unwrapForTesting()
https://bugs.webkit.org/show_bug.cgi?id=310691
Summary Potentially null dereference of wrappedDecoder in Decoder::unwrapForTesting()
Chris Dumez
Reported 2026-03-24 22:47:07 PDT
Potentially null dereference of wrappedDecoder in Decoder::unwrapForTesting().
Attachments
Chris Dumez
Comment 1 2026-03-24 22:48:42 PDT
EWS
Comment 2 2026-03-25 04:39:57 PDT
Committed 309907@main (59d1396282e4): <https://commits.webkit.org/309907@main> Reviewed commits have been landed. Closing PR #61307 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-25 04:40:12 PDT
Note You need to log in before you can comment on or make changes to this bug.