Potential null dereference of wrappedDecoder in Decoder::unwrapForTesting() https://bugs.webkit.org/show_bug.cgi?id=310691

Reviewed by Kimmo Kinnunen.

Potential null dereference of wrappedDecoder in Decoder::unwrapForTesting()
since Decoder::create() can return nullptr. Early return instead if this
happens.

* Source/WebKit/Platform/IPC/Decoder.cpp:
(IPC::Decoder::unwrapForTesting):

Canonical link: https://commits.webkit.org/309907@main